# MultiUAVSystem

UAS_offboard_planner-no_aruco_octomap/: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package.xml
UAS_offboard_planner-no_aruco_octomap/config/: default_dvp.yaml
UAS_offboard_planner-no_aruco_octomap/include/common/: conversor.hpp
UAS_offboard_planner-no_aruco_octomap/launch/: hardware_control.launch  motion_server_standalone.launch  observation_server_standalone.launch  px4.launch  px4_and_vicon.launch  px4_and_vision.launch  px4_and_vision_hotspot.launch  px4_hotspot.launch  px4_vision_and_vicon.launch  t265_and_vision.launch  telemetry_wifi.launch  vrpn.launch  vrpn_groundtruth.launch
UAS_offboard_planner-no_aruco_octomap/launch/optitrack/: launchD1Controller.launch  launchD2Controller.launch  launchD3Controller.launch  launchDroneController.launch  px4_and_opti.launch  vrpn_opti.launch
UAS_offboard_planner-no_aruco_octomap/launch/zed2/: px4_and_vicon_zed2.launch  px4_and_vision_zed2.launch  zed2_mod.launch  zed_camera_mod.launch.xml  zed_camera_vicon.launch.xml  zed_odometry.launch  zed_odometry_vicon.launch
UAS_offboard_planner-no_aruco_octomap/msg/: Drone_pos.msg
UAS_offboard_planner-no_aruco_octomap/parameters/: SLAM_waypoints.txt  SLAM_waypoints_180deg.txt  SLAM_waypoints_270deg.txt  SLAM_waypoints_360deg.txt  SLAM_wpts_lateral_no_yaw.txt  hover_20sec.txt  sample_dual_test.txt  sample_velocity_test.txt  search_waypoints_test.txt  square_waypoints_360deg_slow.txt  square_waypoints_test.txt  system-id_foward-position.txt  system-id_heading-position.txt  system-id_height-position.txt  system-id_lateral-position.txt  t265_initialisation.txt  test_detection-system.txt
UAS_offboard_planner-no_aruco_octomap/scripts/: init_node.sh  init_telemetry_wifi  vscode_init.sh
UAS_offboard_planner-no_aruco_octomap/src/: collision_avoidance.cpp  drone1_controller.cpp  drone2_controller.cpp  drone3_controller.cpp  drone_controller.cpp  motion_server.cpp  observation_server.cpp  offboard_autoland.cpp  offboard_control.cpp
UAS_offboard_planner-no_aruco_octomap/srv/: observation_module.srv
project/: CMakeLists.txt  README.md  Read Me  package.xml
project/launch/: launchGazEnv.launch  launchUAV.launch  launchUAV0.launch  launchUAV1.launch  launchUAV2.launch  launchmultiUAVSim.launch  start_single.launch  startcpp_single.launch
project/msg/: Drone_pos.msg
project/scripts/: single_node.py
project/src/: collision_avoidance.cpp  drone1_controller.cpp  drone2_controller.cpp  drone3_controller.cpp  drone_controller.cpp  drone_tracker.cpp  startcpp_single.cpp
